@@ -45,7 +45,9 @@
 
 #if !COMPILER(MSVC7)
 // We need to define this before the first #include of stdlib.h or it won't contain rand_s.
+#ifndef _CRT_RAND_S
 #define _CRT_RAND_S
+#endif
 #endif
 
 #define HAVE_FLOAT_H 1
