@@ -49,7 +49,9 @@
 #include <stdlib.h>     /* for abort() */
 
 #if COMPILER(MSVC)
+#ifndef WIN32_LEAN_AND_MEAN
 #define WIN32_LEAN_AND_MEAN
+#endif
 #include <windows.h>
 #endif
 
